--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "esbuild src/index.ts --bundle --platform=node --format=cjs --external:@placebot/core --outfile=dist/index.js",
+    "build": "esbuild src/index.ts --bundle --platform=node --format=cjs --external:@placebot/core --external:dotenv --outfile=dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "thatretrodev",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^17.0.23",
-    "esbuild": "^0.14.34"
+    "esbuild": "^0.14.34",
+    "pkg": "^5.6.0"
   },
   "dependencies": {
-    "@placebot/core": "file:../core"
+    "@placebot/core": "file:../core",
+    "dotenv": "^16.0.0"
   }
 }
